# kafka-rust-message

./: Cargo.toml  docker-compose.yaml
src/lib/: application.rs
src/lib/application/: http.rs
src/lib/application/http/: handlers.rs
src/lib/application/http/handlers/: list_messages.rs
src/lib/application/ports/: messaging_ports.rs
src/lib/domain/message/: models.rs  ports.rs  service.rs
src/lib/infrastructure/messaging/: kafka.rs
