[package]
name = "poc"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "poc_server"

[lib]
path = "src/lib/lib.rs"
name = "poc"

[dependencies]
anyhow = "1.0.94"
rdkafka = "0.37.0"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
futures = "0.3.31"
env_logger = "0.11.5"
serde = "1.0.216"
clap = "4.5.23"
serde_json = "1.0.133"
tracing = "0.1.41"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
